k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: djust
  labels:
    name: djust
    environment: production
